--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,7 @@ steps:
     xcodeVersion: 'default' # Options: 8, 9, default, specifyPath
     packageApp: true 
     signingOption: 'nosign'
+    teamId: B233D4Y55J
     
 
     
